--- a/static/css/form.css
+++ b/static/css/form.css
@@ -37,8 +37,8 @@
 }
 
 .filter-input, .form-input {
-    width: 100%; /* Ensure inputs take full width */
-    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    width: 100%; 
+    box-sizing: border-box; 
     background: rgba(255, 255, 255, 0.5);
     border: 1px solid rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(10px);
