--- a/templates/search-result.html
+++ b/templates/search-result.html
@@ -182,4 +182,6 @@
 </div>
 <script src="../static/js/main.js"></script>
 </body>
+    <script src="https://cdn.botpress.cloud/webchat/v3.4/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/11/24/17/20251124172033-tryyhqz3.js" defer></script>
 </html>
